
* SOLR-6994: Implement Windows version of bin/post via implementing bin/solr post command that works on Windows and Unix.  Deprecate bin/post.  (Eric Pugh, Will White)

==================  9.4.0 ==================
New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Dependency Upgrades
---------------------
(No changes)

Other Changes
---------------------
(No changes)

==================  9.3.0 ==================

Upgrade Notes
---------------------

* SOLR-13396: Add property to control the deletion of unknown cores.  The default setting is to not delete unknown cores.
  This is a change to behaviour introduced in Solr 7.3.1 by SOLR-12066. To continue using the previous behaviour, Solr can be
  started with the system property `solr.deleteUnknownCores` set to `true`. (Colvin Cowie, janhoy)

New Features
---------------------
* SOLR-16697: Solr now provides an "Install Shard"  API that allows users who have built (per-shard) indices offline to import
  them into SolrCloud shards.  The API is available at `POST /api/collections/collName/shards/shardName/install`
  (v2), or at `GET /solr/admin/collections?action=INSTALLSHARDDATA` (v1). (Jason Gerlowski)

* SOLR-16742: Produce a slim Solr binary and docker image, without the Prometheus Exporter and Solr Modules. (Houston Putman)

* SOLR-16674: Introduced support for byte vector encoding in DenseVectorField and KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16719: AffinityPlacementFactory now supports spreading replicas across domains within the availability zone and
  optionally fail the request if more than a configurable number of replicas need to be placed in a single domain. (Houston Putman, Tomás Fernández Löbbe)

* SOLR-16836: Introduced support for high dimensional vectors (Alessandro Benedetti).
